--- a/styles/global.css
+++ b/styles/global.css
@@ -7,3 +7,26 @@
 .text_color{
     color: #0e172699;
 }
+
+css
+.progress-bar {
+  width: 100%;
+  height: 20px;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  overflow: hidden;
+}
+ .progress {
+  width: 0%;
+  height: 20px;
+  background-color: #4caf50;
+  animation: progressAnimation 4s linear forwards;
+}
+ @keyframes progressAnimation {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 90%;
+  }
+}
