--- a/styles/global.css
+++ b/styles/global.css
@@ -1,28 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.text_color{
-    color: #0e172699;
+.text_color {
+  color: #0e172699;
 }
 
-css
-.progress-bar {
+css .progress-bar {
   width: 100%;
   height: 20px;
   background-color: #f2f2f2;
   border-radius: 10px;
   overflow: hidden;
 }
- .progress {
+.progress {
   width: 0%;
   height: 20px;
   background-color: #4caf50;
   animation: progressAnimation 4s linear forwards;
 }
- @keyframes progressAnimation {
+@keyframes progressAnimation {
   0% {
     width: 0%;
   }
